--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
     <header>
         <h1>BuHa Fishers Club</h1>
+         <p>Baseline Understanding of Habitat Analysis</p>
         <p>A research-based fishers club dedicated to studying and preserving fish populations in the BuHa area</p>
+       
     </header>
 
     <nav>
