--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <header>
         <h1>BuHa Fishers Club</h1>
          <p>Baseline Understanding of Habitat Analysis</p>
-        <p>A research-based fishers club dedicated to studying and preserving fish populations in the BuHa area</p>
+        <p>A research-based fishers club dedicated to studying the state of inland fisheries in KwaZulu-Natal</p>
        
     </header>
 
