--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
             padding: 10px 0;
             margin-top: 20px;
         }
+
+        .contact-buttons a {
+            display: inline-block;
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .contact-buttons a:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 
@@ -58,9 +72,8 @@
 
     <header>
         <h1>BuHa Fishers Club</h1>
-         <p>Baseline Understanding of Habitat Analysis</p>
+        <p>Baseline Understanding of Habitat Analysis</p>
         <p>A research-based fishers club dedicated to studying the state of inland fisheries in KwaZulu-Natal</p>
-       
     </header>
 
     <nav>
@@ -69,7 +82,7 @@
         <a href="#">Projects</a>
         <a href="#">Events</a>
         <a href="#">Get Involved</a>
-        <a href="#">Contact</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <section id="about">
@@ -91,6 +104,14 @@
     <section id="get-involved">
         <h2>Get Involved</h2>
         <p>Join us in making a difference! Become a member, volunteer, or donate to support our work.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-buttons">
+            <a href="mailto:buhafishers@gmail.com">Email Us</a>
+            <a href="https://www.instagram.com/buhafishersclub?igshid=MW8zY3NhYmZ3bW1wcw==" target="_blank">Follow Us on Instagram</a>
+        </div>
     </section>
 
     <footer>
