--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
         .contact-buttons a:hover {
             background-color: #45a049;
         }
+
+        .gallery img {
+            width: 100%;
+            max-width: 300px;
+            height: auto;
+            margin: 10px;
+            border-radius: 10px;
+        }
+
+        .partners img {
+            width: 100%;
+            max-width: 150px;
+            margin: 20px;
+            height: auto;
+            border-radius: 5px;
+        }
+
+        .partners {
+            text-align: center;
+            padding: 20px;
+        }
     </style>
 </head>
 
@@ -91,6 +112,16 @@
             We are committed to sustainable fishing practices and the protection of aquatic ecosystems.</p>
     </section>
 
+    <!-- New Gallery Section -->
+    <section id="gallery">
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="images/fish1.jpg" alt="Fish Image 1">
+            <img src="images/fish2.jpg" alt="Fish Image 2">
+            <img src="images/lake.jpg" alt="Lake Image">
+        </div>
+    </section>
+
     <section id="projects">
         <h2>Our Projects</h2>
         <p>Learn more about our ongoing research and community initiatives.</p>
@@ -104,6 +135,16 @@
     <section id="get-involved">
         <h2>Get Involved</h2>
         <p>Join us in making a difference! Become a member, volunteer, or donate to support our work.</p>
+    </section>
+
+    <!-- New Partners Section -->
+    <section id="partners">
+        <h2>Our Sponsors & Partners</h2>
+        <div class="partners">
+            <img src="images/partner1-logo.png" alt="Partner 1 Logo">
+            <img src="images/partner2-logo.png" alt="Partner 2 Logo">
+            <img src="images/partner3-logo.png" alt="Partner 3 Logo">
+        </div>
     </section>
 
     <section id="contact">
