--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
         (function() {
-            emailjs.init('YOUR_USER_ID'); // Replace with your actual user ID from EmailJS
+            emailjs.init('service_mr9fojs'); // Replace with your actual user ID from EmailJS
         })();
 
         // Add an event listener for the form submission
